all bugs fixed "hopefully"

--- a/Mindful/Views/Class/_SidebarPartial.cshtml
+++ b/Mindful/Views/Class/_SidebarPartial.cshtml
@@ -12,7 +12,7 @@
                 <a href="@Url.Action("Index", "Student")" class="list-group-item @(Model == "Students" ? "active" : "")">Student</a>
                 <a href="@Url.Action("Index", "Subject")" class="list-group-item @(Model == "Subjects" ? "active" : "")">Subjects</a>
                 <a href="@Url.Action("Index", "Grade")" class="list-group-item @(Model == "Grades" ? "active" : "")">Grades</a>
-                <a href="@Url.Action("Index", "Class")" class="list-group-item">Classes</a>
+                <a href="@Url.Action("Index", "Class")" class="list-group-item active">Classes</a>
             
             </nav>
         </div>
