--- a/Mindful/Views/Subject/Index.cshtml
+++ b/Mindful/Views/Subject/Index.cshtml
@@ -19,6 +19,7 @@
                         <a href="@Url.Action("Index", "Student")" class="list-group-item">Student</a>
                         <a href="#" class="list-group-item active">Subjects</a>
                         <a href="@Url.Action("Index", "Grade")" class="list-group-item">Grades</a>
+                              <a href="@Url.Action("Index", "Class")" class="list-group-item">Classes</a>
                     </nav>
                 </div>
             </div>
