--- a/Mindful/Views/Student/Edit.cshtml
+++ b/Mindful/Views/Student/Edit.cshtml
@@ -1,13 +1,46 @@
 ﻿@model Mindful.Models.Students
 @{
-    ViewBag.Title = Model.id == 0 ? "Create Student" : "Edit Student";
+    ViewBag.Title = "Edit Student";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<div class="card shadow">
-    <div class="card-header"><h6>@ViewBag.Title</h6></div>
-    <div class="card-body">
-        <form asp-action="@ViewContext.RouteData.Values["action"]" method="post">
-            @await Html.PartialAsync("_StudentForm", Model)
-        </form>
+
+<div class="teachers-container">
+    <div class="teachers-layout">
+
+        <aside class="sidebar">
+            <div class="drawer-card shadow">
+                <div class="drawer-Header">
+                    <p style="color:white; font-size:24px">Mindful</p>
+                    <div class="drawer-divider" style="margin-top : 20px ; margin-bottom : 20px"></div>
+                </div>
+                <div class="drawer-card-body">
+                    <nav class="list-group">
+                        <a href="@Url.Action("Index", "Home")" class="list-group-item">Dashboard</a>
+                        <a href="@Url.Action("Index", "Teacher")" class="list-group-item">Teachers</a>
+                        <a href="#" class="list-group-item active">Student</a>
+                        <a href="@Url.Action("Index", "Subject")" class="list-group-item">Subjects</a>
+                        <a href="@Url.Action("Index", "Grade")" class="list-group-item">Grades</a>
+                        <a href="@Url.Action("Index", "Class")" class="list-group-item">Classes</a>
+                    </nav>
+                </div>
+            </div>
+        </aside>
+
+        <main class="content">
+            <div class="card shadow">
+                <div class="card-header">
+                    <h6>@ViewBag.Title</h6>
+                </div>
+                <div class="card-body">
+                    <form asp-action="@ViewContext.RouteData.Values["action"]" method="post">
+                        @await Html.PartialAsync("_StudentForm", Model)
+                    </form>
+                </div>
+            </div>
+        </main>
     </div>
 </div>
+
+@section Scripts {
+    @await Html.PartialAsync("_ValidationScriptsPartial")
+}
