--- a/Mindful/Views/Teacher/Create.cshtml
+++ b/Mindful/Views/Teacher/Create.cshtml
@@ -26,7 +26,7 @@
             </div>
         </aside>
 
-        <main class="content">
+        <main class="content form-view">
             <div class="card shadow">
                 <div class="card-header">
                     <h6>@ViewBag.Title</h6>
